--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="container">
         <ul>
             <span id="marker"></span>
-            <li> <a href="">Home</a></li>
-            <li> <a href="">About Us</a></li>
-            <li> <a href="">Our Services</a></li>
-            <li> <a href="">Portfolio</a></li>
-            <li> <a href="">Team</a></li>
-            <li> <a href="">Contact</a></li>
+            <li> <a href="#">Home</a></li>
+            <li> <a href="#">About Us</a></li>
+            <li> <a href="#">Our Services</a></li>
+            <li> <a href="#">Portfolio</a></li>
+            <li> <a href="#">Team</a></li>
+            <li> <a href="#">Contact</a></li>
         </ul>
     </div>
     
